[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GitHub_Actions_package"
version = "0.0.1"
authors = [
  { name="YaraBlack", email="author@example.com" },
]
description = "A package built by GitHub Actions"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/YaraBlack/dofd_ci-cd"
Issues = "https://github.com/YaraBlack/dofd_ci-cd/issues"
